@@ -1,4 +1,7 @@
 2004-11-28 JoEllen Drazan <skins@pownuke.com> 1.5-cvs-b289
+	New: add css to define text in add_photos.php
+
+2004-11-28 JoEllen Drazan <skins@pownuke.com> 1.5-cvs-b289
 	Fix: restored css for the tabs in add_photos.php
 
 2004-11-28 JoEllen Drazan <skins@pownuke.com> 1.5-cvs-b288
